update Sample Code in Java